added images of categories with appropriate links. Css to be done

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -118,3 +118,9 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.item 
+{
+    width: 200px;
+    height: 200px;
+}
