--- a/frontend/web/css/masonry.css
+++ b/frontend/web/css/masonry.css
@@ -1,10 +1,18 @@
-/* html,
+html,
 body {
     height: 100%;
 }
-div>.item 
+div >.item 
 {
     width: 5px;
     height: 5px;
-    margin: 50px;
-} */
+    margin: 100px;
+    border: 50px;
+} 
+.item img 
+{
+	width: 200px;
+	height: 200px;
+	margin: 20px;
+	border: 1px solid black;
+}
